# ficswitch

./: CHECKLIST.md  Cargo.toml  README.md
.planning/: PROJECT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
src/: lib.rs  main.rs
src/commands/: backup.rs  cache.rs  cloud.rs  mod.rs  profile.rs  status.rs  switch.rs
src/config/: mod.rs
src/core/: backup.rs  branch_cache.rs  mod.rs  mod_deploy.rs  profiles.rs  saves.rs  steam.rs
tests/: test_backup.rs  test_cloud.rs  test_errors.rs  test_profiles.rs  test_switch.rs
